# sticialstudio

./: .env.example  .gitignore  README.md  generate_svgs.js  generate_svgs.mjs  implementation_plan_rebased.md  infrastructure_report.md  middleware.ts  next.config.cjs  next.config.js  opencode.jsonc  package-lock.json  package.json  patch.py  platform_audit.md  recent_commits.txt  render.yaml  status.txt  tailwind.config.js  tsconfig.json  types.d.ts
.codex/environments/: environment.toml
.opencode/: openwork.json
app/: layout.tsx  page.tsx
app/blockly/: BlockEditor.tsx  README.md
app/components/: Card.tsx  LayoutShell.tsx  NavBar.tsx
app/courses/: page.tsx
app/editor/: MonacoEditor.tsx  page.tsx
app/lib/: auth.ts  prisma.ts
app/styles/: globals.css
apps/api/: .env.example  index.js  package-lock.json  package.json
apps/web/: .gitignore  eslint.config.mjs  extract_uno.js  fix_display.js  fix_generator.py  next.config.ts  package-lock.json  package.json  (+2 more)
lib/: prisma.ts
prisma/: schema.prisma  seed.js
scripts/: dev-all.ps1  dev-fast.ps1  stable-local.ps1
velxio-master/: .dockerignore  .gitignore  .gitmodules  .markdownlint.json  CLAUDE.md  COMMERCIAL_LICENSE.md  Dockerfile.espidf-toolchain  Dockerfile.standalone  README.md  build_qemu_all.sh  build_qemu_step4.sh  docker-compose.prod.yml  docker-compose.yml  nginx-host-velxio-temp.conf  nginx-host-velxio.conf  package-lock.json  package.json  start-backend.bat  start-frontend.bat  update-wokwi-libs.bat
velxio-master/backend/app/services/esp-idf-template/main/: CMakeLists.txt  main.c  main.cpp
(+583 files in other folders)
